# promptheus

./: README.md  pyproject.toml
modules/gui/: context_editor_dialog.py  history_dialog.py  text_preview_dialog.py
modules/gui/prompt_execute_dialog/: dialog.py  execution_handler.py  message_widgets.py
modules/gui/settings_dialog/panels/: general_panel.py  prompts_panel.py
modules/gui/settings_dialog/widgets/: prompt_editor_widget.py
modules/gui/shared/: context_widgets.py  icon_confirmation.py  markdown_renderer.py  theme.py  widgets.py
settings_example/: settings.json
